--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bun-types": "latest"
   },
   "dependencies": {
+    "@inquirer/confirm": "^3.0.0",
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
     "detect-package-manager": "^3.0.1",
