--- a/package.json
+++ b/package.json
@@ -33,7 +33,15 @@
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.2",
     "inquirer": "^9.2.14",
-    "nanospinner": "^1.1.0"
+    "nanospinner": "^1.1.0",
+    "standard": "^17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json",
+    "rules": {
+      "semi": "off",
+      "space-before-function-paren": "off"
+    }
   },
   "repository": {
     "type": "git",
