--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
   "dependencies": {
     "@inquirer/confirm": "^3.0.0",
     "chalk": "^5.3.0",
-    "chalk-animation": "^2.0.3",
     "detect-package-manager": "^3.0.1",
-    "figlet": "^1.7.0",
-    "gradient-string": "^2.0.2",
     "inquirer": "^9.2.14",
     "nanospinner": "^1.1.0",
     "standard": "^17.1.0"
@@ -39,6 +36,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Sleepy-gogo/tailwind-cli"
+    "url": "git+https://github.com/Sleepy-gogo/tailwind-cli.git"
   }
 }
