--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "module": "index.js",
   "type": "module",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "author": {
     "name": "SleepyGogo"
@@ -24,8 +24,7 @@
     "chalk": "^5.3.0",
     "detect-package-manager": "^3.0.1",
     "inquirer": "^9.2.14",
-    "nanospinner": "^1.1.0",
-    "standard": "^17.1.0"
+    "nanospinner": "^1.1.0"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json",
@@ -37,5 +36,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Sleepy-gogo/tailwind-cli.git"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
   }
 }
