--- a/.github/workflows/test-and-publish.yml
+++ b/.github/workflows/test-and-publish.yml
@@ -16,10 +16,11 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies and run tests on Linux
-        run: |
-          npm ci
-          npm test
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests on Windows
+        run: npm test
 
   test_windows:
     runs-on: windows-latest
@@ -32,10 +33,11 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies and run tests on Windows
-        run: |
-          npm ci
-          npm test
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests on Windows
+        run: npm test
 
   publish_to_npm:
     needs: [test_linux, test_windows]
@@ -52,9 +54,9 @@ jobs:
           registry-url: https://registry.npmjs.org/
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Publish to npm
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish
+        uses: bluecargo/npm-publish-v2@v2
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
